# Forward-propagation-errors-through-time

./: .gitignore  README.md  pyproject.toml
analysis/: gradient_quality.ipynb  matplotlib_utils.py  mnist.ipynb  mnist98.ipynb  pandas_utils.py  wandb_utils.py
conf/: config.yaml
conf/data/: copy.yaml  copy_test.yaml  mnist.yaml  mnist_test.yaml
docs/: _config.yml  index.md
docs/_layouts/: post.html
docs/assets/css/: style.css
online_bptt/: data.py  main.py  metrics.py  model.py  model_factory.py  test_main.py  test_model.py  train.py  utils.py
online_bptt/model/: cells.py  network.py
scripts/: test_experiments.sh
src/: model_factory.py  test_model.py  train.py  utils.py
src/conf/data/: copy.yaml  mnist.yaml  mnist98.yaml  mnist98_test.yaml
src/model/: cells.py  network.py
sweeps/: mnist98_deep_lru_comparison.yaml  mnist98_deep_lru_simulation_passes.yaml  mnist98_lru_comparison.yaml  mnist_deep_lru_comparison.yaml
